<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
    <device id="retina4_7" orientation="portrait">
        <adaptation id="fullscreen"/>
    </device>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
        <capability name="Named colors" minToolsVersion="9.0"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Login View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController storyboardIdentifier="LoginViewController" id="BYZ-38-t0r" customClass="LoginViewController" customModule="BookStore" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bg" translatesAutoresizingMaskIntoConstraints="NO" id="RIC-Re-YMP">
                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                            </imageView>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" alignment="center" spacing="18" translatesAutoresizingMaskIntoConstraints="NO" id="mvA-gr-haH">
                                <rect key="frame" x="44" y="120" width="287" height="459"/>
                                <subviews>
                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="idea" translatesAutoresizingMaskIntoConstraints="NO" id="kAB-rV-8aH">
                                        <rect key="frame" x="70" y="0.0" width="147" height="160"/>
                                    </imageView>
                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="1Tv-Ri-rxv">
                                        <rect key="frame" x="0.0" y="239.5" width="287" height="96"/>
                                        <subviews>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="2xx-cn-8Sh">
                                                <rect key="frame" x="0.0" y="0.0" width="287" height="44"/>
                                                <accessibility key="accessibilityConfiguration" identifier="usernameField"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="44" id="xY1-co-gcy"/>
                                                </constraints>
                                                <nil key="textColor"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits" autocorrectionType="no" enablesReturnKeyAutomatically="YES" textContentType="username"/>
                                            </textField>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="v8t-zY-MPD">
                                                <rect key="frame" x="0.0" y="52" width="287" height="44"/>
                                                <accessibility key="accessibilityConfiguration" identifier="passwordField"/>
                                                <nil key="textColor"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits" secureTextEntry="YES" textContentType="password"/>
                                            </textField>
                                        </subviews>
                                        <constraints>
                                            <constraint firstItem="v8t-zY-MPD" firstAttribute="height" secondItem="2xx-cn-8Sh" secondAttribute="height" id="7mY-e1-S4H"/>
                                        </constraints>
                                    </stackView>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" adjustsImageSizeForAccessibilityContentSizeCategory="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eHu-Nb-f6l" customClass="BKButton" customModule="BookStore" customModuleProvider="target">
                                        <rect key="frame" x="0.0" y="415" width="287" height="44"/>
                                        <accessibility key="accessibilityConfiguration" identifier="loginButton" label="login"/>
                                        <state key="normal" title="LOGIN"/>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                                <real key="value" value="4"/>
                                            </userDefinedRuntimeAttribute>
                                        </userDefinedRuntimeAttributes>
                                        <connections>
                                            <action selector="loginButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="cL5-uV-m5S"/>
                                        </connections>
                                    </button>
                                </subviews>
                                <constraints>
                                    <constraint firstItem="eHu-Nb-f6l" firstAttribute="width" secondItem="2xx-cn-8Sh" secondAttribute="width" id="0AK-5r-2Ra"/>
                                    <constraint firstItem="eHu-Nb-f6l" firstAttribute="height" secondItem="2xx-cn-8Sh" secondAttribute="height" id="KNe-DW-rys"/>
                                    <constraint firstAttribute="trailing" secondItem="1Tv-Ri-rxv" secondAttribute="trailing" id="afN-Er-m1I"/>
                                    <constraint firstItem="1Tv-Ri-rxv" firstAttribute="leading" secondItem="mvA-gr-haH" secondAttribute="leading" id="rs1-1H-rxQ"/>
                                </constraints>
                            </stackView>
                        </subviews>
                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <constraints>
                            <constraint firstItem="RIC-Re-YMP" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="3kp-9e-cUV"/>
                            <constraint firstItem="mvA-gr-haH" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="100" id="4Lm-es-V7y"/>
                            <constraint firstItem="RIC-Re-YMP" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="Euk-NW-KNW"/>
                            <constraint firstItem="mvA-gr-haH" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="44" id="Npg-s3-FNX"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="mvA-gr-haH" secondAttribute="bottom" constant="88" id="V2z-t1-ixb"/>
                            <constraint firstItem="RIC-Re-YMP" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="a12-Iq-4Qh"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="mvA-gr-haH" secondAttribute="trailing" constant="44" id="fqq-E5-Ed3"/>
                            <constraint firstItem="RIC-Re-YMP" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="tn0-H4-ysH"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <connections>
                        <outlet property="passwordTextField" destination="v8t-zY-MPD" id="jBn-Le-KgE"/>
                        <outlet property="usernameTextField" destination="2xx-cn-8Sh" id="i6l-vz-kHZ"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="24.800000000000001" y="31.934032983508249"/>
        </scene>
        <!--Books Table View Controller-->
        <scene sceneID="7A1-xg-mmh">
            <objects>
                <tableViewController storyboardIdentifier="BooksTableViewController" id="h3T-qj-i0n" customClass="BooksTableViewController" customModule="BookStore" customModuleProvider="target" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="HaJ-dw-Vjg">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" name="paleGrey"/>
                        <color key="sectionIndexBackgroundColor" name="paleGrey"/>
                        <connections>
                            <outlet property="dataSource" destination="h3T-qj-i0n" id="RuU-OA-hdN"/>
                            <outlet property="delegate" destination="h3T-qj-i0n" id="S7w-fD-vOO"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" id="ntX-5x-TdD">
                        <barButtonItem key="leftBarButtonItem" image="menu" landscapeImage="menu" id="2oP-dv-OaW">
                            <connections>
                                <action selector="menuButtonTapped:" destination="h3T-qj-i0n" id="Pi2-54-dEe"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="xuB-CH-c7F" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="984.79999999999995" y="757.87106446776613"/>
        </scene>
        <!--Navigation Controller-->
        <scene sceneID="dQd-YI-o6C">
            <objects>
                <navigationController storyboardIdentifier="BaseNavigationController" automaticallyAdjustsScrollViewInsets="NO" id="r47-CQ-wao" sceneMemberID="viewController">
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="JyH-UB-4d6">
                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <nil name="viewControllers"/>
                    <connections>
                        <segue destination="h3T-qj-i0n" kind="relationship" relationship="rootViewController" id="vMq-Us-c2H"/>
                    </connections>
                </navigationController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="Lp1-8Z-crZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="45.600000000000001" y="757.87106446776613"/>
        </scene>
    </scenes>
    <resources>
        <image name="bg" width="360" height="640"/>
        <image name="idea" width="147" height="160"/>
        <image name="menu" width="18" height="12"/>
        <namedColor name="paleGrey">
            <color red="0.97600001096725464" green="0.98000001907348633" blue="0.98400002717971802" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
        </namedColor>
    </resources>
</document>
