...
        _ = setupNetworkComponentWith(netapi: NetworkAPI.login(username: username, password: password), mapType: User.self, mappedObjectHandle: { (response) in
            self.navigate()
        }, objectArrayHandle: nil, moreInfo: { (message) in
            switch message {
            case .success: break
            case .fail(let errorMessage):
                UIAlertHelper.showAlertWithTitle("Login Error", message: errorMessage, completionBlock: nil, onController: nil, accessibility: "LoginFailAlert")
            }
        })
    }
}


